tests/fixtures/invalid/str_bitand_bool.py
# Cannot bitwise AND Str and Bool
x: str = "hello" & True
